--- a/website/css/CqStyle.css
+++ b/website/css/CqStyle.css
@@ -8,10 +8,12 @@ html{
 html,body {
 	height:100%;
 }
-#content {
+#page {
 	background:#FFFFFF;
+	background-image: url(../rsrc/general-background.png);
+	background-repeat:repeat-y;
 	min-height: 100%;
-	width: 1000px ;
+	width: 1300px ;
 	margin-left: auto ;
 	margin-right: auto ;
 	
@@ -19,18 +21,18 @@ html,body {
 	-webkit-box-shadow: 0px 0px 45px 10px #000;
 	box-shadow: 0px 0px 45px 10px #000;
 }
-#background {
-    width: 100%; 
-    height: 100%; 
-    position: absolute; 
-    left: 0px; 
-    top: 0px; 
-    z-index: 0;
+#contentArea{
+	width: 900px ;
+	margin-left: auto ;
+	margin-right: auto ;
 }
-
-.stretch {
-    width:100%;
-    height:100%;
+#logo{
+	width:445px;
+	height:50px;
+	padding-top: 40px;
+	padding-bottom:20px;
+	margin-left: auto ;
+	margin-right: auto ;
 }
 h1{
 	font-family: Dungeon, serif;
@@ -61,6 +63,5 @@ h1{
 	//margin:30px;
 	width:100%;
 	min-height:300px;
-	background:#D3D3D3;
 	float:none;
 }
