--- a/website/css/gallery.css
+++ b/website/css/gallery.css
@@ -1,12 +1,12 @@
 #slideshow {list-style:none; color:#fff}
 #slideshow span {display:none}
-#wrapper {width:420; margin:0px auto; display:none;overflow:hidden}
+#wrapper {width:420; margin:0px auto; display:none}
 #wrapper * {margin:0px; padding:0px}
-#fullsize {position:relative; width:425px; height:315px; padding:0px; border:0px solid #ccc; background:#000}
+#fullsize {position:relative; width:425px; height:315px; padding:0px; border:1px solid #ccc; background:#000}
 #information {position:absolute; bottom:0px; width:425px; height:0; background:#000; color:#fff; overflow:hidden; z-index:200; opacity:.7; filter:alpha(opacity=70)}
 #information h3 {padding:4px 8px 3px; font-size:14px}
 #information p {padding:0 8px 8px}
-#image {width:425px;height:315px}
+#image {width:415px;height:315px;overflow:hidden}
 #image img {position:absolute; z-index:25; width:auto}
 .imgnav {position:absolute; width:25%; height:306px; cursor:pointer; z-index:150}
 #imgprev {left:0; background:url(../rsrc/images/left.gif) left center no-repeat}
@@ -14,10 +14,10 @@
 #imglink {position:absolute; height:306px; width:100%; z-index:100; opacity:.4; filter:alpha(opacity=40)}
 .linkhover {background:url(../rsrc/images/link.gif) center center no-repeat}
 #thumbnails {margin-top:15px}
-#slideleft {float:left; width:20px; height:75px; background:url(../rsrc/images/scroll-left.gif) center center no-repeat; background-color:#222}
+#slideleft {float:left; width:20px; height:80px; background:url(../rsrc/images/scroll-left.gif) center center no-repeat; background-color:#222}
 #slideleft:hover {background-color:#333}
-#slideright {float:right; width:20px; height:75px; background:#222 url(../rsrc/images/scroll-right.gif) center center no-repeat}
+#slideright {float:right; width:20px; height:80px; background:#222 url(../rsrc/images/scroll-right.gif) center center no-repeat}
 #slideright:hover {background-color:#333}
-#slidearea {float:left; position:relative; width:380px; margin-left:5px; height:75px; overflow:hidden}
+#slidearea {float:left; position:relative; width:370px; margin-left:5px; height:82px; overflow:hidden}
 #slider {position:absolute; left:0; height:75px}
-#slider img {cursor:pointer; border:1px solid #666; padding:2px}
+#slider img {cursor:pointer; border:1px solid #923718; padding:2px}
