--- a/website/css/CqStyle.css
+++ b/website/css/CqStyle.css
@@ -1,18 +1,20 @@
-@font-face { font-family: Dungeon; src: url('rsrc/Dungeon.ttf'); }
-@font-face { font-family: Cust2; src: url('rsrc/AUBREY1.ttf'); }
-@font-face { font-family: Medieval; src: url('../rsrc/CloisterBlack.ttf'); }
+@font-face { font-family: Dungeon; src: url('http://d12dnsmfbcrswq.cloudfront.net/rsrc/Dungeon.ttf'); }
+@font-face { font-family: Cust2; src: url('http://d12dnsmfbcrswq.cloudfront.net/rsrc/AUBREY1.ttf'); }
+@font-face { font-family: Medieval; src: url('http://d12dnsmfbcrswq.cloudfront.net/rsrc/CloisterBlack.ttf'); }
 
 html{
 	background-image: url(../rsrc/bg.png);
 	background-repeat: repeat;
-	font:11px Verdana,Arial;
+	//font:11px Verdana,Arial;
+	font-family: Cust2;
+	font-size:24px;
 }
 body,html{
 	height: 100%;
 }
 #page {
 	background:#FFFFFF;
-	background-image:url(../rsrc/general-background.png);
+	background-image:url(http://d12dnsmfbcrswq.cloudfront.net/rsrc/general-background.png);
 	background-repeat:repeat-y;
 	min-height: 140%;
 	width: 1300px ;
@@ -27,11 +29,6 @@ p{
 	margin-top:30px;
 	margin-bottom:30px;
 }
-p:first-letter
- { 
- font-size:28px;
- font-family: Medieval;
- }
 li{
 	list-style-position:inside;
 	margin-top:10px;
@@ -43,10 +40,10 @@ li{
 	margin-right:auto;
 }
 #logo{
-	width:445px;
+	width:534px;
 	height:50px;
 	padding-top: 40px;
-	padding-bottom:20px;
+	padding-bottom:60px;
 	margin-left: auto ;
 	margin-right: auto ;
 }
@@ -60,11 +57,27 @@ h1{
 	margin-left:auto;
 	margin-right:auto;
 	width:476px;
-	height:930px;
+	height:1000px;
 	padding:18px;
 	padding-top:40px;
-	background-image: url(../rsrc/colbg.png);
+	background-image: url(http://d12dnsmfbcrswq.cloudfront.net/rsrc/colbg.png);
 	background-repeat:no-repeat;
+}
+a{
+	color:#275FB1;
+	size:90%;
+}
+#mino{
+	padding-top:30px;
+	padding-right:15px;
+	float:right;
+}
+#teaser{
+	//width:350px;
+	margin-bottom:-30px;
+	margin-top:-30px;
+	margin-left: auto ;
+	margin-right: auto ;
 }
 #vid
 {
@@ -74,8 +87,13 @@ h1{
 	color:red;
 	float:left;
 }
-span{
+.dc{
 	color:#923718;
+}
+.fl
+{ 
+	font-size:30px;
+	font-family: Medieval;
 }
 #slides
 {
@@ -86,8 +104,6 @@ span{
 	float:left;
 }
 #rightContainer{
-	font-family: Cust2;
-	font-size:20px;
 	padding:10px;
 	float:none;
 }
