--- a/website/css/gallery.css
+++ b/website/css/gallery.css
@@ -9,14 +9,14 @@
 #image {width:415px;height:315px;overflow:hidden}
 #image img {position:absolute; z-index:25; width:auto}
 .imgnav {position:absolute; width:25%; height:306px; cursor:pointer; z-index:150}
-#imgprev {left:0; background:url(../rsrc/images/left.gif) left center no-repeat}
-#imgnext {right:0; background:url(../rsrc/images/right.gif) right center no-repeat}
+#imgprev {left:0; background:url(http://d12dnsmfbcrswq.cloudfront.net/rsrc/images/left.gif) left center no-repeat}
+#imgnext {right:0; background:url(http://d12dnsmfbcrswq.cloudfront.net/rsrc/images/right.gif) right center no-repeat}
 #imglink {position:absolute; height:306px; width:100%; z-index:100; opacity:.4; filter:alpha(opacity=40)}
-.linkhover {background:url(../rsrc/images/link.gif) center center no-repeat}
+.linkhover {background:url(http://d12dnsmfbcrswq.cloudfront.net/rsrc/images/link.gif) center center no-repeat}
 #thumbnails {margin-top:15px}
-#slideleft {float:left; width:20px; height:80px; background:url(../rsrc/images/scroll-left.gif) center center no-repeat; background-color:#222}
+#slideleft {float:left; width:20px; height:80px; background:url(http://d12dnsmfbcrswq.cloudfront.net/rsrc/images/scroll-left.gif) center center no-repeat; background-color:#222}
 #slideleft:hover {background-color:#333}
-#slideright {float:right; width:20px; height:80px; background:#222 url(../rsrc/images/scroll-right.gif) center center no-repeat}
+#slideright {float:right; width:20px; height:80px; background:#222 url(http://d12dnsmfbcrswq.cloudfront.net/rsrc/images/scroll-right.gif) center center no-repeat}
 #slideright:hover {background-color:#333}
 #slidearea {float:left; position:relative; width:370px; margin-left:5px; height:82px; overflow:hidden}
 #slider {position:absolute; left:0; height:75px}
