--- a/website/css/CqStyle.css
+++ b/website/css/CqStyle.css
@@ -6,8 +6,8 @@ html{
 	background-image:url(http://d12dnsmfbcrswq.cloudfront.net/rsrc/bg.png);
 	background-repeat: repeat;
 	//font:11px Verdana,Arial;
-	font-family: Cust2;
-	font-size:24px;
+	font-family: Georgia, Cust2;
+	font-size:18px;
 }
 body,html{
 	height: 100%;
@@ -40,10 +40,9 @@ li{
 	margin-right:auto;
 }
 #logo{
-	width:534px;
-	height:50px;
+	width:695px;
+	height:116px;
 	padding-top: 40px;
-	padding-bottom:60px;
 	margin-left: auto ;
 	margin-right: auto ;
 }
